# jjx

./: .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  DESIGN.md  README  README.md  justfile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: deps.yaml  functional.yaml  lint.yaml  publish.yaml  unit.yaml  zizmor.yaml
.scripts/: implement_call_server.sh  patch-k8s-1-minimal.sh
src/jetty/: _cmd_deploy.py
src/jjx/: __init__.py  _cli.py  _cmd_add_model.py  _cmd_config.py  _cmd_debug_log.py  _cmd_deploy.py  _cmd_destroy_model.py  _cmd_hook_tool.py  _cmd_integrate.py  _cmd_remove_application.py  _cmd_status.py  _cmd_wait_for.py  _engine.py  _virtual_postgres.py
tests/functional/: conftest.py  test_charms.py  test_container.py  test_jjx_cli.py  test_juju_drives_docker.py  test_package.py  test_postgres_lifecycle.py
tests/functional/charms/k8s-1-minimal-patched/tests/integration/: test_charm.py
tests/functional/charms/k8s-2-configurable/src/: fastapi_demo.py
tests/functional/charms/placeholder/: pyproject.toml
tests/functional/charms/placeholder/src/: charm.py
tests/unit/: test_version.py
