[project]
name = "jjx"
version = "0.2.2"
description = "A Juju test adapter for simple Kubernetes charms on Docker."
authors = [
    { name = "Dave Wilding", email = "tech@dpw.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = [
    "PyYAML>=6,<7",
    "tomli>=2,<3; python_version<'3.11'",
]

[project.scripts]
jjx = "jjx._cli:jjx_cli"
juju = "jjx._cli:juju_cli"

[dependency-groups]
dev = [
    "ruff>=0.15.12,<1",
    "pytest>=9,<10",
    "ty>=0.0.35,<1",
    "zizmor>=1,<2",
]

[build-system]
requires = [
    "uv_build>=0.11.14,<1",
]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
extend-exclude = [
    "tests/functional/charms",
]

[tool.ty.src]
exclude = [
    "tests/functional/charms",
]

[tool.pytest.ini_options]
norecursedirs = [
    "tests/functional/charms",
]
