[project]
name = "jjx"
version = "0.2.2"
description = "A Juju-on-Docker test adapter for simple Kubernetes charms."
authors = [
    { name = "Dave Wilding", email = "tech@dpw.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "PyYAML==6.0.3",
    "tomli==2.4.1; python_version<'3.11'",
]

[project.scripts]
jjx = "jjx._cli:jjx_cli"
juju = "jjx._cli:juju_cli"

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "pytest==9.0.3",
    "ty==0.0.44",
    "zizmor==1.25.2",
]

[build-system]
requires = [
    "uv_build==0.11.19",
]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
extend-exclude = [
    "tests/functional/charms",
]

[tool.ty.src]
exclude = [
    "tests/functional/charms",
]

[tool.pytest.ini_options]
norecursedirs = [
    "tests/functional/charms",
]
